--- a/Music/Gemfile
+++ b/Music/Gemfile
@@ -6,7 +6,12 @@ gem 'rails', '3.2.11'
 # gem 'rails', :git => 'git://github.com/rails/rails.git'
 
 gem 'sqlite3'
-
+group :development do
+  gem 'better_errors'
+  gem 'binding_of_caller'
+  gem 'meta_request'
+  gem 'pry-rails'
+end
 
 # Gems used only for assets and not required
 # in production environments by default.
